deploy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: chuck-norris
spec:
  stripPrefix:
    prefixes:
      - /api
