deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chuck-norris
  labels:
    app.kubernetes.io/managed-by: flux
