deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chuck-norris-backend-svc
  namespace: chuck-norris
  labels:
    app.kubernetes.io/name: chuck-norris-backend
    app.kubernetes.io/managed-by: timoni
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chuck-norris-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
