deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chuck-norris-backend-ingress
  namespace: chuck-norris
  labels:
    app.kubernetes.io/name: chuck-norris-backend
    app.kubernetes.io/managed-by: timoni
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    traefik.ingress.kubernetes.io/router.middlewares: chuck-norris-strip-api-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - chuck.filhype.ovh
      secretName: filhype-ingress-tls
  rules:
    - host: chuck.filhype.ovh
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chuck-norris-backend-svc
                port:
                  number: 80
